(bug) Width was larger than 100% on iPhone

--- a/app/less/register.less
+++ b/app/less/register.less
@@ -47,6 +47,7 @@ body {
   box-sizing: border-box;
   padding: 1em;
   width: 30em;
+  max-width: 100%;
 }
 .submitButton-register {
   .submitButton();
